--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ body {
   height: auto;
   display: absolute;
   z-index: -1;
-  background-image: url(images\space.jpg);
+  background-image:url("images/space.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
