--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: content-box;
-
+  
   overflow-x: hidden;
 }
 
@@ -166,6 +166,7 @@ body {
   width: 200px;
   border-radius: 50%;
   margin-bottom: 5px;
+  
   animation: rotate 100s infinite linear;
 }
 
@@ -200,6 +201,19 @@ body {
 .move4 {
   animation: move4 35s infinite linear;
   transform-origin: center;
+}
+
+.senate-text
+{
+  position: absolute;
+   color: rgb(252, 252, 252);
+   size: 150px; 
+   width: 100%;
+    text-align: center;
+    font-size: 70px;
+    font-weight: 700;
+   
+  
 }
 @keyframes move4 {
   from {
